Merge Changes (#8)
* Initial commit

* First commit RIPEstat base docs, changes to some base naming

* Use the date format from the RIPE NCC style guide for "Last Updated"

* pkg updates, force plugin version and add lit reactive elements

* add favicons to config

* Update config.js remove RIPEstat reference

* feat: delete table of contents from right side (#7)

* feat: change base dir (#8)

* feat: remove numbers from entire-documentation section (#9)

* Updated license after Legal review

* Db 4076 documentation without JS (#11)

* feat: save current work. images problem working with a workaround, adding alias. Redirect does not work, add noscript does not work

* feat: add path to merged pages

* feat: modify sidebarlink to add an static input in the left side menu

* feat: redirect when no js, solve the problem of the invisible search box, add new option in the left side to reach the autogenerated doc, autogenerate doc when run build and solve the problem with the title in autogenerated page

* feat: move the static link definition to bottom side of the left menu

* feat: leave the links as before

* feat: add salt gitlab plan (#6)

* feat: add salt gitlab plan

* feat: select current branch

* feat: change the image because async

* feat: use npm install instead of ci

* feat: use another image to avoid the auth error

* feat: change image because rsync command not found

* feat: set the correct path for docs

* feat: use salt template

* feat: set a dummie artifact name

* feat: little change to test cache

* feat: add again the change

* feat: dummie change

* feat: delete dummie folder

* final license text from Legal (#14)

* use documentation prefix 192.0.2.0/24 in examples (#13)

* Db 4076 redirect to entire doc (#12)

* feat: save current work. images problem working with a workaround, adding alias. Redirect does not work, add noscript does not work

* feat: add path to merged pages

* feat: modify sidebarlink to add an static input in the left side me